--- a/rednotebook.nuspec
+++ b/rednotebook.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <!-- == PACKAGE SPECIFIC SECTION == -->
     <id>rednotebook</id>
-    <version>2.8</version>
+    <version>%%VERSION%%</version>
     <packageSourceUrl>https://github.com/TheClonker/rednotebook-chocolatey</packageSourceUrl>
     <owners>TheClonker</owners>
     <!-- ============================== -->
