--- a/rednotebook.nuspec
+++ b/rednotebook.nuspec
@@ -10,8 +10,8 @@
     <!-- == SOFTWARE SPECIFIC SECTION == -->
     <title>Red Notebook</title>
     <authors>Jendrik Seipp</authors>
-    <projectUrl>http://rednotebook.sourceforge.net</projectUrl>
-    <iconUrl>http://cdn.rawgit.com/jendrikseipp/rednotebook/master/rednotebook/images/rednotebook-icon/rn-256.png</iconUrl>
+    <projectUrl>https://rednotebook.app/</projectUrl>
+    <iconUrl>https://cdn.rawgit.com/jendrikseipp/rednotebook/master/rednotebook/images/rednotebook-icon/rn-256.png</iconUrl>
     <licenseUrl>https://github.com/jendrikseipp/rednotebook/blob/master/LICENSE</licenseUrl>
     <projectSourceUrl>https://github.com/jendrikseipp/rednotebook</projectSourceUrl>
     <docsUrl>https://answers.launchpad.net/rednotebook/+faqs</docsUrl>
@@ -20,7 +20,7 @@
     <tags>rednotebook diary journal</tags>
     <summary>A cross-platform diary and journal</summary>
     <description>RedNotebook is a modern journal
-	It lets you format, tag and search your entries. You can also add pictures, links and customizable templates, spell check your notes, and export to plain text, HTML, Latex or PDF. RedNotebook is Free Software under the GPL.
+	  It lets you format, tag and search your entries. You can also add pictures, links and customizable templates, spell check your notes, and export to plain text, HTML, Latex or PDF. RedNotebook is Free Software under the GPL.
     </description>
     <releaseNotes>%%RELEASENOTES%%</releaseNotes>
   <!-- =============================== -->
